# NZ-ORCID-Hub

./: .conda.yml  .coveragerc  .coveralls.yml  .deepsource.toml  .dockerignore  .editorconfig  .env.sample  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CNAME  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SENDMAIL.md  TROUBLESHOOTING.md  _locustfile.sample.py  api.py  app.conf  app.wsgi  application.py  authcontroller.py  backup-db.sh  config.py  config_v3.0_rc2.json  conftest.py  create.py  dev  dev_requirements.txt  docker-compose.yml  failover.py  flask.sh  forms.py  (+44 more)
.keys/: .dev-sp.key  .test-server.key  CA.crt  README.md  dev-server.crt  dev-server.csr  dev-server.key  dev-sp.crt  extract_keys  test-server.crt  test-sp.crt  test-sp.key  test-sp.p12
.travis/: README.md  deploy_key.pem  deploy_key.pem.pub
app/: app.wsgi
archive/: README.md
backup/: README.md
conf/: apache2.conf  attribute-map.xml  auditing.sql  init-user-db.sh  orcid_swagger_v3_config.json  squid.conf
docs/: Makefile  README.md  app_registration.rst  certificates.rst  conf.py  customising_email_messages.rst  db_recovery.rst  development_env.rst  docker-build-run.md  docker.rst  fundings_schema.md  index.rst  installation.rst  modules.rst  orcid_api.apis.rst  orcid_api.models.rst  orcid_api.rst  orcid_api_proxy.rst  orcid_api_spec.rst  orcid_hub.rst  peer-review-schema.md  peer_review_schema.md  pg_upgrade.rst  pg_upgrade_15.rst  sendmail.rst  shibboleth.rst  troubleshooting.rst  virtualbox.rst  webhooks.rst  (+7 more)
(+1513 files in other folders)
