[flake8]
ignore = E126,W503,D105,E722
exclude = .git,__pycache__,venv,orcid_api,migrations,SAML,docs,swagger_client,orcid,setup.py,dist,build
max-line-length = 120
# max-complexity = 10

[yapf]
based_on_style = pep8
column_limit = 99

[metadata]
description-file = docs/README.md

[egg_info]
tag_build = dev 
tag_date = 1

[aliases]
release = egg_info -RDb ”
